# public/openapi/local.yaml
@@ -65,13 +65,15 @@ paths:
           application/json:
             schema:
               type: object
-              properties:
+              properties:                 
                 requests:
                   type: array
                   items:
                     type: object
-                    description: A single update request, such as inserting text or formatting.
+                    description: A single update request, such as inserting text or formatting. Follow strictly Google Docs API specs.
                     properties: {}
+              required: 
+                - requests
               example:
                 requests:
                   - insertText:
@@ -85,3 +87,38 @@ paths:
             application/json:
               schema:
                 type: object
+
+  /v1/documents/{documentId}/markdown/insert:
+    post:
+      operationId: documents_markdown_insert
+      summary: Convert markdown to Google Docs format and apply batch update
+      description: |
+        Converts markdown to Google Docs format and applies batch update.
+        If user provide document link, please extract the documentId from it.
+      parameters:
+        - in: path
+          name: documentId
+          required: true
+          description: The ID of the document to apply the batch updates to.
+          schema:
+            type: string
+          example: 1Q9pDyZsea-7wQAtJGD2XUu-skcDrg3Xz4Sev0atnGVw
+      requestBody:
+        description: |
+          The request body should contain a list of update requests in the Google Docs API batch update format.
+          Valid requests will be applied sequentially. If any update is invalid, the entire batch fails.
+        content:
+          text/markdown:
+            schema:
+              type: string
+            example:
+              |
+           
+      responses:
+        "200":
+          description: A successful response
+          content:
+            application/json:
+              schema:
+                type: object
+
