# src/docs/routes.ts
@@ -2,6 +2,7 @@
 import { Hono } from "hono";
 import { forward } from "./apis/forward";
 import { batchUpdate } from "./apis/batch-update";
+import { markdownInsert } from "./apis/markdown-insert";
 
 
 const app = new Hono();
@@ -10,5 +11,6 @@ const app = new Hono();
 app.post("/documents", forward);
 app.get("/documents/:documentId", forward);
 app.post("/documents/:documentId/batchUpdate", batchUpdate);
+app.post("/documents/:documentId/markdown/insert", markdownInsert);
 
 export default app;
